--- a/.ci/proj_jjb.yaml
+++ b/.ci/proj_jjb.yaml
@@ -145,50 +145,35 @@
           default: ""
           description: ""
     dsl: |
-        @Library('blossom-github-lib@master')
-        import ipp.blossom.*
+      @Library('blossom-github-lib@master')
+      import ipp.blossom.*
 
-        withCredentials([usernamePassword(credentialsId: 'svcnbu-swx-hpcx-github-token', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {{
-          githubHelper = GithubHelper.getInstance("${{GIT_PASSWORD}}", VARIABLE_FROM_POST)
+      withCredentials([usernamePassword(credentialsId: 'svcnbu-swx-hpcx-github-token', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
+        githubHelper = GithubHelper.getInstance("${GIT_PASSWORD}", VARIABLE_FROM_POST)
+      }
+      def blueOceanUrl = "${JENKINS_URL}blue/organizations/jenkins/UCC%2F${{env.JOB_BASE_NAME}}/detail/${{env.JOB_BASE_NAME}}/${{env.BUILD_NUMBER}}/pipeline/"
+      githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI started", GitHubCommitState.PENDING, env.JOB_BASE_NAME)
+      currentBuild.description = githubHelper.getBuildDescription()
+      try {{
+        parallel 'ucc': {{
+            def jobName = 'ucc'
+            build job: jobName, parameters: [
+                string(name: 'sha1', value: githubHelper.getMergedSHA()),
+                string(name: 'githubData', value: VARIABLE_FROM_POST)
+            ], propagate: true, wait: true
+        }}, 'ucc-build-hpcsdk': {{
+            def jobName = 'ucc-build-hpcsdk'
+            build job: jobName, parameters: [
+                string(name: 'sha1', value: githubHelper.getMergedSHA()),
+                string(name: 'githubData', value: VARIABLE_FROM_POST)
+            ], propagate: true, wait: true
         }}
-
-        def blueOceanUrl = "${{JENKINS_URL}}blue/organizations/jenkins/{jjb_folder}%2F{jjb_proj}-ci-dispatcher/detail/{jjb_proj}-ci-dispatcher/${{BUILD_NUMBER}}/pipeline/"
-        githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI started", GitHubCommitState.PENDING)
-        currentBuild.description = githubHelper.getBuildDescription()
-
-        try {{
-            parallel UCC: {{
-                def jobName = 'ucc'
-                def run = build job: jobName, parameters: [
-                    string(name: 'sha1', value: githubHelper.getMergedSHA()),
-                    string(name: 'githubData', value: VARIABLE_FROM_POST)
-                ], propagate: false
-                def jobUrl = "${{JENKINS_URL}}blue/organizations/jenkins/{jjb_folder}%2F${{jobName}}/detail/${{jobName}}/${{run.number}}/pipeline"
-                if (run.resultIsBetterOrEqualTo('SUCCESS')) {{
-                    echo "${{jobName}} SUCCESS: ${{jobUrl}}"
-                }} else {{
-                    error("${{jobName}} FAILED: ${{jobUrl}}")
-                }}
-            }}, 'ucc-build-hpcsdk': {{
-                def jobName = 'ucc-build-hpcsdk'
-                def run = build job: jobName, parameters: [
-                    string(name: 'sha1', value: githubHelper.getMergedSHA()),
-                    string(name: 'githubData', value: VARIABLE_FROM_POST)
-                ], propagate: false
-                def jobUrl = "${{JENKINS_URL}}blue/organizations/jenkins/{jjb_folder}%2F${{jobName}}/detail/${{jobName}}/${{run.number}}/pipeline"
-                if (run.resultIsBetterOrEqualTo('SUCCESS')) {{
-                    echo "${{jobName}} SUCCESS: ${{jobUrl}}"
-                }} else {{
-                    error("${{jobName}} FAILED: ${{jobUrl}}")
-                }}
-            }}
-
-            githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI succeeded", GitHubCommitState.SUCCESS)
-        }} catch(Exception ex) {{
-            println ex
-            githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI failed", GitHubCommitState.FAILURE)
-            error("failed")
-        }}
+        githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI ended", GitHubCommitState.SUCCESS, env.JOB_BASE_NAME)
+      }} catch(Exception ex) {{
+          println ex
+          githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI ended", GitHubCommitState.FAILURE, env.JOB_BASE_NAME)
+          throw ex
+      }}
 
 - project:
     name: ucc-build
