TL/CUDA: nvls allgatherv
Signed-off-by: Ilya Kryukov <ikryukov@nvidia.com>

--- a/src/components/tl/cuda/Makefile.am
+++ b/src/components/tl/cuda/Makefile.am
@@ -54,6 +54,7 @@ if TL_CUDA_NVLS_ENABLED
 reduce_scatter += reduce_scatter/reduce_scatter_nvls.c
 reduce_scatterv += reduce_scatterv/reduce_scatterv_nvls.c
 allreduce += allreduce/allreduce_nvls.c
+allgatherv += allgatherv/allgatherv_nvls.c
 endif
 
 sources =               \
