--- a/src/components/tl/cuda/kernels/Makefile.am
+++ b/src/components/tl/cuda/kernels/Makefile.am
@@ -22,7 +22,9 @@ LINK = $(LIBTOOL) --mode=link $(CC) -o $@
 comp_noinst = libucc_tl_cuda_kernels.la
 
 if TL_CUDA_NVLS_ENABLED
-libucc_tl_cuda_kernels_la_SOURCES  = reduce_scatter_kernel.cu allreduce_kernel.cu
+libucc_tl_cuda_kernels_la_SOURCES  = reduce_scatter_kernel.cu \
+    allreduce_kernel.cu \
+    allgatherv_kernel.cu
 else
 libucc_tl_cuda_kernels_la_SOURCES  =
 endif
@@ -34,3 +36,4 @@ noinst_LTLIBRARIES = $(comp_noinst)
 # Ensure kernels rebuild when helper header changes
 reduce_scatter_kernel.lo: nvls.cuh
 allreduce_kernel.lo: nvls.cuh
+allgatherv_kernel.lo: nvls.cuh
