--- a/.ci/proj_jjb.yaml
+++ b/.ci/proj_jjb.yaml
@@ -148,11 +148,11 @@
       @Library('blossom-github-lib@master')
       import ipp.blossom.*
 
-      withCredentials([usernamePassword(credentialsId: 'svcnbu-swx-hpcx-github-token', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {
-        githubHelper = GithubHelper.getInstance("${GIT_PASSWORD}", VARIABLE_FROM_POST)
-      }
-      def blueOceanUrl = "${JENKINS_URL}blue/organizations/jenkins/UCC%2F${{env.JOB_BASE_NAME}}/detail/${{env.JOB_BASE_NAME}}/${{env.BUILD_NUMBER}}/pipeline/"
-      githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI started", GitHubCommitState.PENDING, env.JOB_BASE_NAME)
+      withCredentials([usernamePassword(credentialsId: 'svcnbu-swx-hpcx-github-token', passwordVariable: 'GIT_PASSWORD', usernameVariable: 'GIT_USERNAME')]) {{
+        githubHelper = GithubHelper.getInstance("${{GIT_PASSWORD}}", VARIABLE_FROM_POST)
+      }}
+      def blueOceanUrl = "${{JENKINS_URL}}blue/organizations/jenkins/UCC%2F${{env.JOB_BASE_NAME}}/detail/${{env.JOB_BASE_NAME}}/${{env.BUILD_NUMBER}}/pipeline/"
+      githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI started", GitHubCommitState.PENDING)
       currentBuild.description = githubHelper.getBuildDescription()
       try {{
         parallel 'ucc': {{
@@ -168,10 +168,10 @@
                 string(name: 'githubData', value: VARIABLE_FROM_POST)
             ], propagate: true, wait: true
         }}
-        githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI ended", GitHubCommitState.SUCCESS, env.JOB_BASE_NAME)
+        githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI ended", GitHubCommitState.SUCCESS)
       }} catch(Exception ex) {{
           println ex
-          githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI ended", GitHubCommitState.FAILURE, env.JOB_BASE_NAME)
+          githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI ended", GitHubCommitState.FAILURE)
           throw ex
       }}
 
