CI: nvls tests add new job to blososm trigger
Signed-off-by: Daniel Pressler <danielpr@nvidia.com>

--- a/.ci/proj_jjb.yaml
+++ b/.ci/proj_jjb.yaml
@@ -2,7 +2,6 @@
     name: "{jjb_proj}"
     folder: "{jjb_folder}"
     project-type: pipeline
-    folder: "{jjb_folder}"
     properties:
       - github:
           url: "{jjb_git_web}"
@@ -216,13 +215,19 @@
             build job: jobName, parameters: [
                 string(name: 'sha1', value: githubHelper.getMergedSHA()),
                 string(name: 'githubData', value: VARIABLE_FROM_POST)
-            ], propagate: true, wait: true
+            ], propagate: false, wait: true
         }}, 'ucc-build-hpcsdk': {{
             def jobName = 'ucc-build-hpcsdk'
             build job: jobName, parameters: [
                 string(name: 'sha1', value: githubHelper.getMergedSHA()),
                 string(name: 'githubData', value: VARIABLE_FROM_POST)
-            ], propagate: true, wait: true
+            ], propagate: false, wait: true
+        }}, 'ucc-test-nvls': {{
+            def jobName = 'ucc-test-nvls'
+            build job: jobName, parameters: [
+                string(name: 'sha1', value: githubHelper.getMergedSHA()),
+                string(name: 'githubData', value: VARIABLE_FROM_POST)
+            ], propagate: false, wait: true
         }}
         githubHelper.updateCommitStatus(blueOceanUrl, "Blossom CI ended", GitHubCommitState.SUCCESS)
       }} catch(Exception ex) {{
