CORE: move cuda topology to core

--- a/configure.ac
+++ b/configure.ac
@@ -244,6 +244,8 @@ AC_CONFIG_FILES([
                  src/components/cl/doca_urom/Makefile
                  src/components/mc/cpu/Makefile
                  src/components/mc/cuda/Makefile
+                 src/components/topo/cuda/Makefile
+                 src/components/topo/ib/Makefile
                  src/components/ec/cpu/Makefile
                  src/components/ec/cuda/Makefile
                  src/components/ec/cuda/kernel/Makefile
