--- a/src/components/tl/cuda/kernels/Makefile.am
+++ b/src/components/tl/cuda/kernels/Makefile.am
@@ -14,10 +14,10 @@ NVCCFLAGS =                                      \
 LINK = $(LIBTOOL) --mode=link $(CC) -o $@
 
 .cu.o:
-	$(NVCC) -c $< -o $@  $(NVCCFLAGS) $(NVCC_ARCH)
+	$(NVCC) -c $< -o $@  $(NVCCFLAGS) $(NVCC_ARCH_NVLS)
 
 .cu.lo:
-	/bin/bash $(top_srcdir)/cuda_lt.sh "$(LIBTOOL)" $@ $(NVCC) -c  $< $(NVCCFLAGS) $(NVCC_ARCH)
+	/bin/bash $(top_srcdir)/cuda_lt.sh "$(LIBTOOL)" $@ $(NVCC) -c  $< $(NVCCFLAGS) $(NVCC_ARCH_NVLS)
 
 comp_noinst = libucc_tl_cuda_kernels.la
 
