--- a/.github/workflows/codestyle.yaml
+++ b/.github/workflows/codestyle.yaml
@@ -9,7 +9,7 @@ concurrency:
 
 env:
   GIT_CF: https://raw.githubusercontent.com/llvm/llvm-project/release/21.x/clang/tools/clang-format/git-clang-format
-  LLVM_VERSION: 21
+  CLANG_FORMAT_VERSION: "21.1.8"
 
 jobs:
   check-codestyle:
@@ -21,14 +21,8 @@ jobs:
     steps:
     - name: Install dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y --no-install-recommends wget lsb-release software-properties-common gnupg
-        wget -qO- https://apt.llvm.org/llvm-snapshot.gpg.key | sudo tee /etc/apt/trusted.gpg.d/llvm.asc
-        sudo add-apt-repository -y "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-${LLVM_VERSION} main"
-        sudo apt-get update
-        sudo apt-get install -y --no-install-recommends clang-format-${LLVM_VERSION}
+        pipx install clang-format==${CLANG_FORMAT_VERSION}
 
-        # Install git-clang-format (no version suffix)
         curl -fsSL $GIT_CF -o git-clang-format
         chmod +x ./git-clang-format
         sudo mv ./git-clang-format /usr/bin/git-clang-format
@@ -86,7 +80,7 @@ jobs:
       run: |
         set -eEuo pipefail
         echo "Commit ${{ github.event.pull_request.base.sha }}"
-        diff=`git-clang-format --binary=clang-format-${LLVM_VERSION} --style=file --diff ${{ github.event.pull_request.base.sha }}` || true
+        diff=`git-clang-format --binary=clang-format --style=file --diff ${{ github.event.pull_request.base.sha }}` || true
         if [ "$diff" = "no modified files to format" ] || [ "$diff" = "clang-format did not modify any files" ]
         then
           echo "Format check PASS"
@@ -94,7 +88,7 @@ jobs:
           echo "Format check FAILED"
           echo ""
           echo "Please format your code using:"
-          echo "  git-clang-format --binary=clang-format-${LLVM_VERSION} ${{ github.event.pull_request.base.sha }}"
+          echo "  git-clang-format --binary=clang-format ${{ github.event.pull_request.base.sha }}"
           echo ""
           echo "Formatting differences:"
           echo "$diff"
